fix alignment issues

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -10,18 +10,16 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap');
 :root {
-
-    --ifm-color-primary: #07903e;
-    --ifm-color-primary-white: #f5f6f7;
-    --ifm-color-primary-dark: rgb(13, 126, 101);
-    --ifm-color-primary-darker: rgb(13, 100, 81);
-    --ifm-color-primary-darkest: rgb(26, 136, 112);
-    --ifm-color-primary-light: rgb(12, 173, 138);
-    --ifm-color-primary-lighter: rgb(7, 77, 61);
-    --ifm-color-primary-lightest: rgb(10, 117, 96);
-    --ifm-code-font-size: 120%;
-    font-family: 'Poppins', sans-serif;
-
+  --ifm-color-primary: #07903e;
+  --ifm-color-primary-white: #f5f6f7;
+  --ifm-color-primary-dark: rgb(13, 126, 101);
+  --ifm-color-primary-darker: rgb(13, 100, 81);
+  --ifm-color-primary-darkest: rgb(26, 136, 112);
+  --ifm-color-primary-light: rgb(12, 173, 138);
+  --ifm-color-primary-lighter: rgb(7, 77, 61);
+  --ifm-color-primary-lightest: rgb(10, 117, 96);
+  --ifm-code-font-size: 120%;
+  font-family: 'Poppins', sans-serif;
 }
 
 .docusaurus-highlight-code-line {
@@ -86,7 +84,7 @@
 }
 
 .row {
-  padding-left: 10%;
+  padding-left: 0%;
 }
 
 /* Custom Light */
@@ -105,7 +103,6 @@ html[data-theme='light'] a {
   color: #475447;
 }
 
-
 html[data-theme='light'] a:hover {
   text-decoration: none;
   color: #07903e;
@@ -117,7 +114,6 @@ html[data-theme='light'] .navbar {
 
 html[data-theme='light'] .contributors {
   background-color: var(--ifm-color-primary-white);
-
 }
 
 html[data-theme='light'] .footer {
